# FastAPI-React-Vite-Tailwind

./: .env  .gitignore  compose.dev.yml  main.py  pyproject.toml
backend/: alembic.ini  config.py  db.py  main.py
backend/app/auth/: schemas.py  users.py
backend/app/models/: models.py
backend/migrations/: env.py
backend/migrations/versions/: 0421e2b5830d_initial_fastapi_users.py
frontend/: vite.config.mjs
